--- a/assets/i18n/i18n_cn.json
+++ b/assets/i18n/i18n_cn.json
@@ -7,7 +7,7 @@
     "home__title":"Hi, I'm Banxx",
     "home__subtitle":"后端工程师",
     "home__subtitle1":"前端开发",
-    "home__description":"热爱学习，热爱生活，创造更高质量工作成果。",
+    "home__description":"热爱学习，热爱生活，<br>创造更高质量工作成果。",
     "home__contact":"与我联系",
     "home__scroll-name":"往下滑",
     "about__title":"关于我",
@@ -20,10 +20,8 @@
     "skills__title":"技能",
     "skills__subtitle":"技术水平",
     "skills__years":"2年工作经验",
-
     "skills__title2":"后端开发",
     "skills__years2":"3年工作经验",
-
     "qualification__title":"资历",
     "qualification__subtitle":"个人履历",
     "education":"教育",
@@ -36,7 +34,6 @@
     "qualification3__subtitle":"自学",
     "qualification4__title":"软件工程师",
     "qualification4__subtitle":"深圳",
-
     "portfolio__title":"项目集",
     "portfolio__subtitle":"近期项目",
     "portfolio1__title":"网站1",
@@ -45,7 +42,6 @@
     "portfolio2__description":"网站采用响应式布局，适配于多种设备，具有UI组件和动画交互。",
     "portfolio3__title":"网站3",
     "portfolio3__description":"网站采用响应式布局，适配于多种设备，具有UI组件和动画交互。",
-
     "contact__title":"联系方式",
     "contact__subtitle":"与我联系",
     "tel":"电话",
