--- a/assets/i18n/i18n_cn.json
+++ b/assets/i18n/i18n_cn.json
@@ -26,29 +26,29 @@
     "qualification__subtitle":"个人履历",
     "education":"教育",
     "work":"工作",
-    "qualification1__title":"计算机科学与技术",
-    "qualification1__subtitle":"**大学",
+    "qualification1__title":"计算机应用技术",
+    "qualification1__subtitle":"武汉科技大学",
     "qualification2__title":"网页设计",
     "qualification2__subtitle":"自学",
     "qualification3__title":"网站开发",
     "qualification3__subtitle":"自学",
     "qualification4__title":"软件工程师",
     "qualification4__subtitle":"深圳",
+    "qualification5__subtitle":"武汉",
     "portfolio__title":"项目集",
     "portfolio__subtitle":"近期项目",
-    "portfolio1__title":"网站1",
-    "portfolio1__description":"网站采用响应式布局，适配于多种设备，具有UI组件和动画交互。",
-    "portfolio2__title":"网站2",
-    "portfolio2__description":"网站采用响应式布局，适配于多种设备，具有UI组件和动画交互。",
-    "portfolio3__title":"网站3",
-    "portfolio3__description":"网站采用响应式布局，适配于多种设备，具有UI组件和动画交互。",
+    "portfolio1__title":"项目1",
+    "portfolio1__description":"学生在线学习、做题、考试一体平台，具有web后台，app端，H5端多端展示。",
+    "portfolio2__title":"项目2",
+    "portfolio2__description":"在线小说阅读平台，后台监控小说管理，app端给予用户展示在线阅读。",
+    "portfolio3__title":"项目3",
+    "portfolio3__description":"多商户多权限物流管理平台，实时监控物流走向，物流报表汇总。",
     "contact__title":"联系方式",
     "contact__subtitle":"与我联系",
     "tel":"电话",
     "tel__number":"15572750170",
     "email":"电子邮箱",
     "email__address":"ban@banxx.cn",
-    "location":"位置",
+    "location":"户籍",
     "location__detail":"湖北省"
-    
 }
