--- a/assets/i18n/i18n_en.json
+++ b/assets/i18n/i18n_en.json
@@ -25,28 +25,29 @@
     "qualification__subtitle":"My personal journey",
     "education":"Education",
     "work":"Work",
-    "qualification1__title":"Computer Enginner",
-    "qualification1__subtitle":"**** - University",
+    "qualification1__title":"Computer Application Technology ",
+    "qualification1__subtitle":"Wuhan University Of Science And Technology",
     "qualification2__title":"Web Design",
     "qualification2__subtitle":"Self-Study",
     "qualification3__title":"Web Development",
     "qualification3__subtitle":"Self-Study",
     "qualification4__title":"Software Enginner",
     "qualification4__subtitle":"ShenZhen",
+    "qualification5__subtitle":"WuHan",
     "portfolio__title":"Portfolio",
     "portfolio__subtitle":"Most recent works",
-    "portfolio1__title":"Modern Website 1",
-    "portfolio1__description":"Website adaptable to all devices, with ui components and animated interactions.",
-    "portfolio2__title":"Modern Website 2",
-    "portfolio2__description":"Website adaptable to all devices, with ui components and animated interactions.",
-    "portfolio3__title":"Modern Website 3",
-    "portfolio3__description":"Website adaptable to all devices, with ui components and animated interactions.",
+    "portfolio1__title":"Project 1",
+    "portfolio1__description":"An integrated platform for students' online learning, problem-solving, and exams, with a web backend, app end, and H5 end display.",
+    "portfolio2__title":"Project 2",
+    "portfolio2__description":"Online novel reading platform,backend monitoring of novel management,and app display of online reading for users.",
+    "portfolio3__title":"Project 3",
+    "portfolio3__description":"Multi merchant and multi authority logistics management platform,real-time monitoring of logistics trends,and summary of logistics reports.",
     "contact__title":"Contact me",
     "contact__subtitle":"Get in touch",
     "tel":"Call me",
     "tel__number":"15572750170",
     "email":"E-mail",
     "email__address":"ban@banxx.cn",
-    "location":"Location",
+    "location":"Domicile ",
     "location__detail":"HuBei , CHN"
 }
