--- a/assets/i18n/i18n_cn.json
+++ b/assets/i18n/i18n_cn.json
@@ -4,6 +4,7 @@
     "skills":"技能",
     "portfolio":"项目集",
     "contact":"联系方式",
+    "blog":"博客",
     "home__title":"Hi, I'm Banxx",
     "home__subtitle":"后端工程师",
     "home__subtitle1":"前端开发",
